# servant-snap

./: .gitmodules  .travis.yml  CHANGELOG.md  README.md  cabal.project  default.nix  init-sandbox.sh  nixpkgs.nix  pkgs.nix  release.nix  servant-snap.cabal  shell-common.nix  shell.nix  snap-notes.md  stack.yaml
example/: greet.hs
pkgs/: hspec-snap.nix
snaplets/heist/templates/: test.tpl
src/: Servant.hs
src/Servant/: Server.hs
src/Servant/Server/: Internal.hs
src/Servant/Server/Internal/: BasicAuth.hs  Context.hs  Enter.hs  PathInfo.hs  Router.hs  RoutingApplication.hs  ServantErr.hs  SnapShims.hs
src/Servant/Utils/: StaticFiles.hs
static/: test.txt
test/Servant/: ServerSpec.hs  StreamingSpec.hs
test/Servant/Server/: CORSSpec.hs
test/Servant/Server/Internal/: EnterSpec.hs
test/Servant/Utils/: SnapTestUtils.hs  StaticFilesSpec.hs
