name:                servant-snap
version:             0.6
synopsis:            A family of combinators for defining webservices APIs and serving them
description:
  Interpret a Servant API as a Snap server, using any Snaplets you like.
  .
  You can learn about the basics of servant in the Servant <http://haskell-servant.github.io/tutorial tutorial>, and about the basics of Snap at the Snaplets <http://snapframework.com/docs/tutorials/snaplets-tutorial tutorial>
  .
  <https://github.com/haskell-servant/servant-snap/blob/master/servant-server/example/greet.hs Here>
  is a runnable example, with comments, that defines a dummy API and implements
  a webserver that serves this API, using this package. One route delegates to the <https://hackage.haskell.org/package/snap/docs/Snap-Snaplet-Auth.html Auth> snaplet, another delegates to <https://hackage.haskell.org/package/snap/docs/Snap-Snaplet-Heist.html Heist>.
  .
  <https://github.com/haskell-servant/servant-snap/blob/master/servant-snap/CHANGELOG.md CHANGELOG>
homepage:            http://haskell-servant.github.io/
Bug-reports:         http://github.com/haskell-servant/servant/issues
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari, Sönke Hahn, Julian K. Arni, Greg Hale
maintainer:          alpmestan@gmail.com imalsogreg@gmail.com
copyright:           2014 Zalora South East Asia Pte Ltd
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1
extra-source-files:
  CHANGELOG.md
  README.md
source-repository head
  type: git
  location: http://github.com/haskell-servant/servant-snap.git


library
  exposed-modules:
    Servant
    Servant.Server
    Servant.Server.Internal
    Servant.Server.Internal.Enter
    Servant.Server.Internal.PathInfo
    Servant.Server.Internal.Router
    Servant.Server.Internal.RoutingApplication
    Servant.Server.Internal.ServantErr
    Servant.Server.Internal.SnapShims
    Servant.Utils.StaticFiles
  build-depends:
        base               >= 4.7  && < 5
      , aeson              >= 0.7  && < 1.1
      , attoparsec         >= 0.12 && < 0.14
      , bytestring         >= 0.10 && < 0.11
      , case-insensitive   >= 1.2  && < 1.3
      , containers         >= 0.5  && < 0.6
      , either             >= 4.3  && < 4.5
      , http-types         >= 0.8  && < 0.10
      , http-api-data      >= 0.2  && < 0.4
      , io-streams         >= 1.3  && < 1.4
      , network-uri        >= 2.6  && < 2.7
      , mtl                >= 2.0  && < 2.3
      , mmorph             >= 1    && < 1.1
      , servant            >= 0.6  && < 0.9
      , string-conversions >= 0.3  && < 0.5
      , filepath           >= 1    && < 1.5
      , text               >= 1.2  && < 1.3
      , transformers       >= 0.3  && < 0.6
      , snap               >= 1.0  && < 1.1
      , snap-core          >= 1.0  && < 1.1
      , snap-server        >= 1.0  && < 1.1
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

executable snap-greet
  main-is: greet.hs
  hs-source-dirs: example
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends:
      aeson
    , base
    , bytestring
    , either
    , errors
    , heist
    , lens
    , servant             >= 0.6
    , servant-snap
    , map-syntax
    , snap
    , snap-core
    , snap-server
    , text
    , transformers

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options:
    -Wall -fno-warn-name-shadowing -fno-warn-missing-signatures
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:
      base == 4.*
    , aeson
    , bytestring
    , containers
    , directory
    , either
    , exceptions
    , hspec >= 2.2.3 && < 2.4

  if impl(ghcjs)
    build-depends:
        hspec-snap >= 1.0 && < 1.1
      , hspec-core
      , http-types
      , mtl
      , network >= 2.6
      , QuickCheck
      , parsec
      , servant
      , servant-snap
      , snap
      , snap-core
      , snap-server
      , string-conversions
      , text
      , transformers
